[gd_scene load_steps=18 format=2]

[ext_resource path="res://Src/GUI/EnemyGUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Objects/EnemyBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Src/Components/DiceCore/DiceCore.gd" type="Script" id=3]
[ext_resource path="res://Src/Components/Emitter.gd" type="Script" id=4]
[ext_resource path="res://Src/Components/DiceCore/Adder/Add3DiceCore.tres" type="Resource" id=5]
[ext_resource path="res://Src/Components/Limiter.gd" type="Script" id=6]
[ext_resource path="res://Src/Components/DiceWrapper.gd" type="Script" id=7]
[ext_resource path="res://Src/Enemy/Ranged/RangedEnemy.gd" type="Script" id=8]
[ext_resource path="res://Assets/Art/enemy-sniper.png" type="Texture" id=9]
[ext_resource path="res://Assets/Art/sniper-gun.png" type="Texture" id=10]
[ext_resource path="res://Src/Enemy/on-hit-vfx.gdshader" type="Shader" id=11]
[ext_resource path="res://Src/Enemy/on-hit-shader.tres" type="Material" id=12]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 11 )
shader_param/warna_flash = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -10.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 10 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Shoot"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6, -10 ), Vector2( 6, -15 ), Vector2( 13, -15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 10.0, 20.0, 4.99999 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -10.0, -20.0, -4.99999 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 10 ), Vector2( 6, 15 ), Vector2( 13, 15 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Shoot-2"

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[node name="RangedEnemy" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 5 )
texture = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="."]
material = ExtResource( 12 )
position = Vector2( 6, 0 )
texture = ExtResource( 10 )
centered = false
offset = Vector2( 0, -64 )

[node name="Sprite3" type="Sprite" parent="."]
material = ExtResource( 12 )
position = Vector2( 6, 10 )
rotation = -0.174533
texture = ExtResource( 10 )
centered = false
flip_v = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 48, 0, 24, -48, -24, -48, -48, 0, -24, 48, 24, 48 )

[node name="EnemyGUI" parent="." instance=ExtResource( 1 )]

[node name="EnemyGUI" parent="EnemyGUI" index="0"]
margin_top = -120.0
margin_bottom = -120.0

[node name="DiceWrapper" type="Node" parent="."]
script = ExtResource( 7 )

[node name="DiceCore" type="Node" parent="DiceWrapper"]
script = ExtResource( 3 )
dice_core_resource = ExtResource( 5 )

[node name="Limiter" type="Node" parent="DiceWrapper"]
script = ExtResource( 6 )

[node name="DiceTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Emitter" type="Node2D" parent="."]
script = ExtResource( 4 )
bullet_scn = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite3")
anims/RESET = SubResource( 2 )
anims/Shoot = SubResource( 3 )
anims/Shoot-2 = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ShaderTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="behaviour_changed" from="." to="EnemyGUI" method="_on_behaviour_changed"]
[connection signal="health_changed" from="." to="EnemyGUI" method="_on_health_changed"]
[connection signal="dice_core_changed" from="DiceWrapper" to="EnemyGUI" method="_on_DiceWrapper_dice_core_changed"]
[connection signal="dice_rolled" from="DiceWrapper" to="EnemyGUI" method="_on_DiceWrapper_dice_rolled"]
[connection signal="limiter_changed" from="DiceWrapper" to="EnemyGUI" method="_on_DiceWrapper_limiter_changed"]
[connection signal="number_changed" from="DiceWrapper" to="EnemyGUI" method="_on_DiceWrapper_number_changed"]
[connection signal="timeout" from="DiceTimer" to="." method="reroll"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="ShaderTimer" to="." method="_on_ShaderTimer_timeout"]

[editable path="EnemyGUI"]
